addons-standalone/kiali/gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: addons-kiali-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - kiali.qcloud.jijiechen.com
    port:
      name: http
      number: 80
      protocol: HTTP
